<resources>
    <string name="app_name">Kritika</string>
    <string name="artist">Artist</string>
    <string name="authors">Authors</string>
    <string name="books">Books</string>
    <string name="book_title">Book Title</string>
    <string name="book_desc">Book Description</string>
    <string name="categories">Categories</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="media_title">Media Title</string>
    <string name="movies">Movies</string>
    <string name="movie_title">Movie title</string>
    <string name="movie_desc">Movie description</string>
    <string name="movie_rating">Movie rating</string>
    <string name="music">Music</string>
    <string name="music_title">Music title</string>
    <string name="music_artist">Music artist</string>
    <string name="name">Name</string>
    <string name="new_user_signup">New user? <b>SignUp</b></string>
    <string name="overview">Overview</string>
    <string name="password">Password</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="popular_books">Popular Books</string>
    <string name="please_login">Please Login</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="register">Register</string>
    <string name="reviews">Reviews</string>
    <string name="saved_n_favs">Saved and favourites</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="user_name">User Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_media">Add New Media</string>
    <string name="submit">Submit</string>
    <string name="artists">Artists</string>
    <string name="rate">Rate Media</string>
    <string name="add_list">Add to List</string>
    <string name="review">Write a Review</string>
    <string name="enter_review">Enter your review here</string>
    <string name="public_review">Make Review Public</string>
    <string name="submit_review">Submit Review</string>
    <string name="rating">Rate this media</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="profile_ratings">Ratings</string>
    <string name="profile_reviews">Reviews</string>
    <string name="profile_lists">Lists</string>
    <string name="profile_media_title">Media Title</string>
    <string name="profile_media_rating">4.5</string>
    <string name="profile_list_title">List Title</string>
    <string name="profile_list_items">4 items in this list</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="enter_email">Enter your registered email address to reset your password.</string>

    <string-array name="content_types">
        <item>Movies</item>
        <item>Songs</item>
        <item>Books</item>
    </string-array>

    <string-array name="list_options">
        <item>List 1</item>
        <item>List 2</item>
        <item>New List</item>
    </string-array>

</resources>