<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/rateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:drawablePadding="8dp" />

    <Button
        android:id="@+id/addToListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_list"
        android:drawablePadding="8dp" />

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:drawablePadding="8dp" />

</LinearLayout>
