<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewThumbnail"
        android:layout_width="399dp"
        android:layout_height="532dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="387dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/book_title"
        android:textColor="@color/KritikaPurple"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewThumbnail"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="377dp"
        android:layout_height="88dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="7"
        android:text="@string/book_desc"
        android:textColor="@color/JetBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewThumbnail" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="391dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/authors"
        android:textColor="@color/KritikaPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintWidth_default="wrap" />

</androidx.constraintlayout.widget.ConstraintLayout>