<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/back01"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewThumbnail"
            android:layout_width="0dp"
            android:layout_height="532dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Gradient overlay -->
        <View
            android:id="@+id/gradientOverlay"
            android:layout_width="match_parent"
            android:layout_height="532dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/openMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="@color/KritikaPurple" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="387dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/book_title"
            android:elevation="1dp"
            android:textColor="@color/KritikaPurple"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewThumbnail"
            app:layout_constraintWidth_default="wrap" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="377dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:text="@string/book_desc"
            android:textColor="@color/JetBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewThumbnail" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="391dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/authors"
            android:textColor="@color/KritikaPurple"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintWidth_default="wrap" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>