<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back01"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movieImageViewPoster"
        android:layout_width="0dp"
        android:layout_height="532dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Gradient overlay -->
    <View
        android:id="@+id/gradientOverlay"
        android:layout_width="match_parent"
        android:layout_height="532dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="204dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/movie_title"
        android:textColor="@color/KritikaPurple"
        android:textSize="26sp"
        android:elevation="1dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieImageViewPoster"
        app:layout_constraintWidth_default="wrap" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/openMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/KritikaPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/movieImageViewPoster"
        app:layout_constraintVertical_bias="0.938">

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:maxLines="7"
            android:text="@string/movie_desc"
            android:textColor="@color/JetBlack"
            android:textSize="16sp"
            android:textStyle="normal|bold" />
    </ScrollView>

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/movie_rating"
        android:textColor="@color/KritikaPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieImageViewPoster"
        app:layout_constraintWidth_default="wrap" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="532dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0dp"
        android:background="@drawable/gradient_overlay_2" />
</androidx.constraintlayout.widget.ConstraintLayout>
